--- a/about.css
+++ b/about.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -77,7 +76,7 @@ input:checked~.list {
 }
 
 .aboutimg {
-    height: 76vh;
+    height: 30vh;
 }
 
 .logo {
@@ -113,13 +112,18 @@ input:checked~.list {
 
 .aboutcontent {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+    min-height: 300px;
+    position: relative;
+    top: 259px;
 }
 
 .aboutcontent p {
     font-size: 20px;
     padding: 20px;
-    width: 80%;
+    width: 100%;
     text-align: justify;
 }
 
@@ -130,6 +134,8 @@ input:checked~.list {
     background-repeat: no-repeat;
     background-size: cover;
     padding: 20px;
+    position: relative;
+    top: 250px;
 }
 
 .aboutfontbox>h1 {
@@ -157,6 +163,7 @@ input:checked~.list {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    min-height: 100vh;
     color: aliceblue;
 }
 
@@ -186,16 +193,16 @@ input:checked~.list {
     background: aliceblue;
     text-align: center;
     box-shadow: 0 0 20px rgba(0, 0, 0, 4.5);
-    transition:400ms;
+    transition: 400ms;
     cursor: pointer;
     margin: 10px;
 }
-marquee{
+
+marquee {
     height: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
-    transform: scale(1.1);
 }
 
 .brands:hover {
@@ -225,6 +232,8 @@ marquee{
     background-repeat: no-repeat;
     background-position: center;
     padding: 50px;
+    position: relative;
+    top: 200px;
 }
 
 .bottombox {
@@ -237,8 +246,8 @@ marquee{
     align-items: center;
     color: aliceblue;
     padding: 20px;
-    text-align: center;
-
+    position: relative;
+    top: 135px;
 }
 
 .bottombox1 {
@@ -264,7 +273,7 @@ marquee{
     font-size: 20px;
     flex-direction: column;
     text-transform: uppercase;
-    gap: 60px;
+    gap: 45px;
 }
 
 a {
@@ -274,17 +283,19 @@ a {
 }
 
 .bottombox1>button {
-    width: 369px;
+    width: 200px;
     height: 62px;
     font-size: 25px;
     border: none;
     position: absolute;
-    bottom: 166px;
-    transition: 0.1s;
+    bottom: 160px;
     background-color: rgb(248, 13, 25);
+    border-radius: 10px;
 }
+
 .bottombox1>button:hover {
-    transform: scale(1.1);
+    background-color: #ef4e03;
+    color: #ffff;
 }
 
 .navbar {
@@ -331,9 +342,6 @@ a {
         display: none;
     }
 
-    .aboutimg {
-        min-height: 85vh;
-    }
 
     .aboutmobile {
         display: block !important;
@@ -347,11 +355,11 @@ a {
     .aboutcontent {
         flex-direction: column;
         align-items: center;
+        margin-top: 65px;
+        position: relative;
+        top: 222px;
     }
 
-    .aboutcontent p {
-        width: 100%;
-    }
 
     .logo {
         width: 250px;
@@ -420,23 +428,35 @@ a {
     }
 
 }
+
 @media screen and (min-width:300px) and (max-width:950px) {
-    
+
     .bottombox {
         flex-direction: column;
     }
 
     .bottombox1>button {
         width: 250px;
-        bottom: 375px;
+        position: absolute;
+        bottom: 245px;
+    }
+
+    .bottombox1 {
+        margin-bottom: 30px;
+    }
+
+    .bottomlist {
+        gap: 20px;
     }
 }
+
 @media screen and (min-width:300px) and (max-width:530px) {
-.navbar>a {
-    font-size: 10px;
-    gap: 10px;
-}
-.bottombox1>img {
-    width: 300px;
-}
+    .navbar>a {
+        font-size: 10px;
+        gap: 10px;
+    }
+
+    .bottombox1>img {
+        width: 300px;
+    }
 }
