--- a/carrents.css
+++ b/carrents.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -244,7 +243,7 @@ marquee {
     padding: 20px;
 }
 
-.customcontent{
+.customcontent {
     display: flex;
     flex-direction: column;
     color: rgb(3 2 2);
@@ -299,7 +298,7 @@ marquee {
     justify-content: space-evenly;
     width: 100%;
     gap: 85px;
-    margin-bottom: 78px;
+    margin-bottom: 80px;
 }
 
 .bottombox2 {
@@ -315,7 +314,7 @@ marquee {
     font-size: 20px;
     flex-direction: column;
     text-transform: uppercase;
-    gap: 60px;
+    gap: 37px;
 }
 
 a {
@@ -325,17 +324,19 @@ a {
 }
 
 .bottombox1>button {
-    width: 369px;
+    width: 200px;
     height: 62px;
     font-size: 25px;
     border: none;
     position: absolute;
-    bottom: 166px;
-    transition: 0.1s;
+    bottom: 170px;
     background-color: rgb(248, 13, 25);
+    border-radius: 10px;
 }
+
 .bottombox1>button:hover {
-    transform: scale(1.1);
+    background-color: #ef4e03;
+    color: #ffff;
 }
 
 .navbar {
@@ -398,7 +399,7 @@ a {
 
     marquee {
         font-size: 30px;
-    margin-top: 78px;
+        margin-top: 78px;
     }
 }
 
@@ -422,11 +423,11 @@ a {
         padding-top: 22px;
     }
 }
+
 @media screen and (min-width:1024px) and (max-width:1400px) {
- marquee{
-    font-size: 30px;
-    margin-top: 20px;
- }
+    marquee {
+        font-size: 30px;
+    }
 }
 
 
@@ -464,23 +465,33 @@ a {
         top: 22px;
     }
 }
+
 @media screen and (min-width:300px) and (max-width:950px) {
-    
+
     .bottombox {
         flex-direction: column;
     }
 
+    .bottombox1 {
+        margin-bottom: 20px;
+    }
+
     .bottombox1>button {
-        width: 250px;
-        bottom: 375px;
+        bottom: 230px;
+    }
+
+    .bottomlist {
+        gap: 20px;
     }
 }
+
 @media screen and (min-width:300px) and (max-width:530px) {
-.navbar>a {
-    font-size: 10px;
-    gap: 10px;
-}
-.bottombox1>img {
-    width: 300px;
-}
+    .navbar>a {
+        font-size: 10px;
+        gap: 10px;
+    }
+
+    .bottombox1>img {
+        width: 300px;
+    }
 }
