--- a/contact.css
+++ b/contact.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -138,6 +137,7 @@ marquee {
 .contactmenu>p {
     font-weight: 700;
     font-size: 17px;
+    text-align: justify;
 }
 
 .img1,
@@ -194,7 +194,7 @@ marquee {
 
 .contactbottommed {
     display: flex;
-    background-color: #443535;
+    background-color: black;
     margin-bottom: 70px;
     color: antiquewhite;
     min-height: 50vh;
@@ -270,10 +270,11 @@ button {
     align-items: center;
     flex-direction: column;
     text-align: center;
+
 }
 
 .num>h1 {
-    color: black;
+    color: blue;
 }
 
 .num>h4 {
@@ -288,7 +289,7 @@ button {
 .contactsubcontainer4 {
     display: flex;
     justify-content: space-around;
-    background-color: #872d2d;
+    background-color: red;
     color: aliceblue;
     margin-top: 80px;
     margin-bottom: 50px;
@@ -318,7 +319,7 @@ button {
     justify-content: space-evenly;
     width: 100%;
     gap: 85px;
-    margin-bottom: 78px;
+    margin-bottom: 80px;
 }
 
 .bottombox2 {
@@ -334,7 +335,7 @@ button {
     font-size: 20px;
     flex-direction: column;
     text-transform: uppercase;
-    gap: 60px;
+    gap: 37px;
 }
 
 a {
@@ -344,18 +345,19 @@ a {
 }
 
 .bottombox1>button {
-    width: 369px;
+    width: 200px;
     height: 62px;
     font-size: 25px;
     border: none;
     position: absolute;
-    bottom: 166px;
-    transition: 0.1s;
+    bottom: 170px;
     background-color: rgb(248, 13, 25);
+    border-radius: 10px;
 }
 
 .bottombox1>button:hover {
-    transform: scale(1.1);
+    background-color: #ef4e03;
+    color: #ffff;
 }
 
 .navbar {
@@ -470,6 +472,10 @@ a {
         top: 22px;
         display: block !important;
     }
+
+    .contactmenu {
+        margin-top: 10px;
+    }
 }
 
 @media screen and (min-width:300px) and (max-width:950px) {
@@ -477,9 +483,16 @@ a {
         flex-direction: column;
     }
 
+    .bottombox1 {
+        margin-bottom: 20px;
+    }
+
+    .bottomlist {
+        gap: 20px;
+    }
+
     .bottombox1>button {
-        width: 250px;
-        bottom: 375px;
+        bottom: 240px;
     }
 }
 
@@ -492,7 +505,18 @@ a {
     .bottombox1>img {
         width: 300px;
     }
+
     .box {
         width: auto;
+    }
+
+    .contactmenu {
+        width: 100%;
+        padding: 10px;
+    }
+
+    .num>h1 {
+        color: blue;
+        font-weight: 900;
     }
 }
