--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -20,6 +19,10 @@
     position: absolute;
     top: -17px;
     width: 270px;
+}
+
+.nav a img:hover {
+    width: 275px;
 }
 
 .nav {
@@ -61,13 +64,15 @@ input {
     color: rgb(255, 255, 255);
     display: none !important;
     padding-right: 20px;
+
 }
 
 input:checked~.list {
     background-color: rgb(7, 8, 8, (0.7));
     right: 0;
 }
-.mainlogo .list a ul{
+
+.mainlogo .list a ul {
     position: relative;
 }
 
@@ -99,11 +104,12 @@ input:checked~.list {
     text-align: center;
 }
 
-.animation{
+.animation {
     position: relative;
     width: 700px;
 }
-.animation video{
+
+.animation video {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -111,14 +117,16 @@ input:checked~.list {
     left: 0;
     object-fit: cover;
 }
-.title{
+
+.title {
     font-size: 100px;
     font-weight: 900;
     background-color: #000000;
-    color:aliceblue;
+    color: aliceblue;
     mix-blend-mode: multiply;
     border: 10px solid aliceblue;
 }
+
 .contentimg>p {
     font-size: 25px;
 }
@@ -126,7 +134,7 @@ input:checked~.list {
 .indexbutton {
     width: 200px;
     height: 40px;
-    background-color:blue;
+    background-color: blue;
     color: aliceblue;
     border-radius: 10px;
     font-size: 16px;
@@ -150,8 +158,7 @@ input:checked~.list {
     align-items: center;
     color: aliceblue;
     padding: 20px;
-    text-align: center;
-
+    position: relative;
 }
 
 .bottombox1 {
@@ -177,7 +184,7 @@ input:checked~.list {
     font-size: 20px;
     flex-direction: column;
     text-transform: uppercase;
-    gap: 60px;
+    gap: 45px;
 }
 
 a {
@@ -187,23 +194,24 @@ a {
 }
 
 .bottombox1>button {
-    width: 369px;
+    width: 200px;
     height: 62px;
     font-size: 25px;
     border: none;
     position: absolute;
-    bottom: -235px;
-    transition: 1.1s;
+    bottom: 160px;
     background-color: rgb(248, 13, 25);
+    border-radius: 10px;
 }
 
 .bottombox1>button:hover {
-    transform: scale(1.1);
+    background-color: #ef4e03;
+    color: #ffff;
 }
 
 .navbar {
     display: flex;
-    gap:20px;
+    gap: 20px;
 }
 
 .navbar>a:hover {
@@ -258,6 +266,9 @@ a {
 
     .fa-bars {
         display: block !important;
+        position: relative;
+        right: 10px;
+        top: 0px;
     }
 
     .contentimg>h1 {
@@ -268,37 +279,93 @@ a {
         font-size: 19px;
     }
 
-    .fa-bars {
-        position: absolute;
-        right: 10px;
-        top: 22px;
-    }
     .bottombox {
         flex-direction: column;
     }
 
+    .bottombox1 {
+        margin-bottom: 20px;
+    }
+
+    .bottomlist {
+        gap: 10px;
+    }
+
     .bottombox1>button {
-        width: 250px;
+        bottom: -160px;
     }
+
 }
+
 @media screen and (min-width:300px) and (max-width:800px) {
-  .animation{
-    width: auto;
-  }
-}
-@media screen and (min-width:300px) and (max-width:530px) {
-    .contentimg > p{
-        display: none !important;
+    .animation {
+        width: auto;
     }
+
+    .animation>video {
+        width: 100%;
+    }
+
+    .contentimg>p {
+        text-align: justify;
+    }
+}
+
+@media screen and (min-width:590px) and (max-width:950px) {
+    .bottombox1>button {
+        bottom: 225px;
+        position: absolute;
+    }
+}
+
+@media screen and (min-width:300px) and (max-width:530px) {
+
     .navbar>a {
         font-size: 10px;
         gap: 10px;
     }
+
     .bottombox1>img {
         width: 300px;
     }
-    .bottombox1>button {
-        margin-bottom: 30px
-    }
+
+    .bottombox1 {
+        gap: 100px;
     }
 
+    .title {
+        font-size: 45px;
+    }
+
+    .animation>video {
+        display: none !important;
+    }
+
+    .animation {
+        background-color: #ef0303;
+    }
+}
+
+@media screen and (min-width:300px) and (max-width:590px) {
+    .container {
+        min-height: 100vh;
+    }
+
+    .container>.contentimg {
+        gap: 50px;
+        top: 30%;
+    }
+
+    .title {
+        font-size: 50px;
+    }
+
+    .tandc {
+        font-size: 11px;
+    }
+
+    .bottombox1>button {
+        bottom: 200px;
+        position: absolute;
+    }
+}
