--- a/service.css
+++ b/service.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -9,6 +8,7 @@
 .servicecontainer {
     position: relative;
 }
+
 .nav a img {
     position: absolute;
     top: -17px;
@@ -73,12 +73,15 @@ input:checked~.list {
     width: 100%;
     transition: 0.5s;
 }
+
 .serviceimg {
-    height: 76vh;
+    height: 60vh;
 }
 
 .logo {
     width: fit-content;
+    background-color: black;
+    border-radius: 10px;
 }
 
 .logocontent {
@@ -116,14 +119,19 @@ input:checked~.list {
 
 .servicecontent {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
+    top: 125px;
 }
 
 .servicebox1 {
     min-height: 430px;
     display: flex;
     gap: 10px;
+    position: relative;
+    top: 100px;
 }
 
 .logocontent {
@@ -188,7 +196,8 @@ input:checked~.list {
     align-items: center;
     color: aliceblue;
     padding: 20px;
-    text-align: center;
+    position: relative;
+    top: 70px;
 
 }
 
@@ -215,7 +224,7 @@ input:checked~.list {
     font-size: 20px;
     flex-direction: column;
     text-transform: uppercase;
-    gap: 60px;
+    gap: 45px;
 }
 
 a {
@@ -225,17 +234,119 @@ a {
 }
 
 .bottombox1>button {
-    width: 369px;
+    width: 200px;
     height: 62px;
     font-size: 25px;
     border: none;
     position: absolute;
-    bottom: 166px;
-    transition: 0.1s;
+    bottom: -235px;
     background-color: rgb(248, 13, 25);
+    border-radius: 10px;
 }
+
 .bottombox1>button:hover {
-    transform: scale(1.1);
+    background-color: #ef4e03;
+    color: #ffff;
+}
+
+.navbar {
+    display: flex;
+    gap: 20px;
+}
+
+.navbar>a:hover {
+    color: #ef0303;
+}
+
+.tandc {
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+    gap: 20px;
+}
+
+.bottomfonts {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+}
+
+.navbar:hover {
+    color: #ef0303;
+}
+
+.tandc :hover {
+    color: #ef0303;
+}
+
+.bottomfonts :hover {
+    color: #ef0303;
+}
+
+.box1font {
+    margin-right: 10px;
+    color: rgb(27 27 211);
+}
+
+.bottombox {
+    min-height: 50vh;
+    background-image: url(./HD-wallpaper-black-bmw-car.jpg);
+    width: 100%;
+    background-position: center;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    color: aliceblue;
+    padding: 20px;
+
+}
+
+.bottombox1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    gap: 85px;
+    margin-bottom: 78px;
+}
+
+.bottombox2 {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+
+.bottomlist {
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 20px;
+    flex-direction: column;
+    text-transform: uppercase;
+    gap: 45px;
+}
+
+a {
+    font-size: 15px;
+    text-decoration: none;
+    color: aliceblue;
+}
+
+.bottombox1>button {
+    width: 200px;
+    height: 62px;
+    font-size: 25px;
+    border: none;
+    position: absolute;
+    bottom: 155px;
+    background-color: rgb(248, 13, 25);
+    border-radius: 10px;
+}
+
+.bottombox1>button:hover {
+    background-color: #ef4e03;
+    color: #ffff;
 }
 
 .navbar {
@@ -292,6 +403,7 @@ a {
         flex-direction: column-reverse;
     }
 }
+
 @media screen and (min-width:300px) and (max-width:950px) {
     .list {
         position: fixed;
@@ -319,26 +431,38 @@ a {
         top: 22px;
     }
 }
+
 @media screen and (min-width:300px) and (max-width:950px) {
-    
+
     .bottombox {
         flex-direction: column;
     }
 
     .bottombox1>button {
-        width: 250px;
-        bottom: 375px;
+        bottom: 244px;
+    }
+
+    .bottomlist {
+        gap: 20px;
+    }
+
+    .bottombox1 {
+        margin-bottom: 20px;
     }
 }
+
 @media screen and (min-width:300px) and (max-width:530px) {
-.navbar>a {
-    font-size: 10px;
-    gap: 10px;
-}
-.bottombox1>img {
-    width: 300px;
-}
-.logo{
-    width: 300px;
-}
+    .navbar>a {
+        font-size: 10px;
+        gap: 10px;
+    }
+
+    .bottombox1>img {
+        width: 300px;
+    }
+
+    .logo {
+        width: 300px;
+    }
+
 }
